--- a/PetWidget/Info.plist
+++ b/PetWidget/Info.plist
@@ -27,5 +27,9 @@
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.widget-extension</string>
 	</dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>crayon_1-1.ttf</string>
+	</array>
 </dict>
 </plist>
