--- a/NoteApp/Info.plist
+++ b/NoteApp/Info.plist
@@ -81,5 +81,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    
+<!--    <key>LSApplicationQueriesSchemes</Key>-->
+<!--    <array>-->
+<!--        <string>googlechromes</string>-->
+<!--        <string>comgooglemaps</string>-->
 </dict>
 </plist>
