--- a/NoteApp/Info.plist
+++ b/NoteApp/Info.plist
@@ -81,10 +81,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-    
-<!--    <key>LSApplicationQueriesSchemes</Key>-->
+<!--   <key>LSApplicationQueriesSchemes</key>-->
 <!--    <array>-->
-<!--        <string>googlechromes</string>-->
-<!--        <string>comgooglemaps</string>-->
+<!--      <string>googlechromes</string>-->
+<!--      <string>comgooglemaps</string>-->
+<!--    </array>-->
 </dict>
 </plist>
