--- a/NoteApp/Info.plist
+++ b/NoteApp/Info.plist
@@ -81,10 +81,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-<!--   <key>LSApplicationQueriesSchemes</key>-->
-<!--    <array>-->
-<!--      <string>googlechromes</string>-->
-<!--      <string>comgooglemaps</string>-->
-<!--    </array>-->
+	<key>UIUserInterfaceStyle</key>
+	<string>Light</string>
 </dict>
 </plist>
